src/test/deca/context/invalid/intermediaire2/arithmetiques/01typeErrorMod.deca
// Description:
//    Programme minimaliste calculant un modulo avec une valeur float -> erreur de typage.
//
// Resultats:
//    01typeErrorMod.lis
//
// Historique:
//    cree le 09/06/2022

{
    int x = 5 % 2.5;
}